<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/sure_collect" />
                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:text="V1.0"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/welcomeBack"
                android:textColor="@color/darkGrey"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/userId"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/underline"
                android:paddingHorizontal="5dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:hint="@string/enterUserId"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/colorHeader"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:paddingHorizontal="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorHint"
                    android:hint=" "
                    app:hintAnimationEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enterPassword"
                        android:inputType="textPassword"
                        app:hintEnabled="false"
                        android:maxLines="1"
                        android:textAllCaps="false"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:visibility="invisible"
                android:text="@string/forgotPassWord"
                android:textColor="@color/colorHeader"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/dark_yellow_rounded_background"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingVertical="15dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/paleYellow"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>