<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ActivityCallSetting">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:src="@drawable/ic_arrow_back"
            android:scaleType="fitStart"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/call_setting"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="start"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:justificationMode="inter_word"
        android:text="@string/call_setting_message"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:background="@drawable/bg_round_border"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/direct_call"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"/>
        <Switch
            android:id="@+id/switch_opt_enable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
    </LinearLayout>

</LinearLayout>